--- a/css/style.css
+++ b/css/style.css
@@ -83,12 +83,12 @@ body {
 
 .main .box-container .box:nth-of-type(2) {
 
-    background-color: rgb(0, 105, 112)
+    background-color: rgb(0, 105, 112);
 }
 
 .main .box-container .box:nth-of-type(3) {
 
-    background-color: hsl(179, 100%, 13%)
+    background-color: hsl(179, 100%, 13%);
 }
 
 
@@ -118,7 +118,8 @@ body {
 .main {
     height: 160vh;
     display: flex;
-    flex-flow: column;
+    max-width: 600px;
+    margin: 2% auto;
 }
 
 .main .box-container {
@@ -131,9 +132,9 @@ body {
     left: 0%;
     transform:  translate(0%, 0%);
     border-radius: 1rem;
-    width: 90%;
     margin: 2% 5%;
     overflow: hidden;
+   
     
 }
 
